# tuiui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  build.rs  install.sh
.github/workflows/: release.yml  update-catalog.yml
.kilo/plans/: activity-monitor.md
agent/: BRIEFING.md  DESKTOP.md  README.md  RULES.md  SYSTEMS.md  TROUBLESHOOTING.md
assets/: catalog.json  drm-uaccess.rules  polkit-drm.rules  recipes.json  tuiui-compositor.service  tuiui.desktop
docs/superpowers/plans/: 2026-06-03-tuiui-slice1-shell.md  2026-06-04-menubar-tray.md  2026-06-05-cascading-launcher.md  2026-06-05-default-apps.md  2026-06-05-desktop-icons.md  2026-06-05-file-manager-core.md  2026-06-05-file-manager-rich.md  2026-06-05-graphics-passthrough-a2.md  2026-06-05-grid-tiling.md  2026-06-05-image-layer.md  2026-06-05-working-directory-selector.md  (+10 more)
scripts/: derive_os.py  gen_catalog.py  match_brew.py  merge_recipes.py  new_apps_report.py
src/: activity.rs  assistant.rs  badge.rs  buffer.rs  calendar.rs  catalog.rs  cell.rs  chrome.rs  client.rs  compositor.rs  compositor_main.rs  config.rs  confirmclose.rs  daemon.rs  desktop.rs  dirpicker.rs  filemanager.rs  fileops.rs  geometry.rs  gpm.rs  help.rs  icons.rs  imagestore.rs  imageview.rs  input.rs  kitty.rs  kittygfx.rs  launcher.rs  launchwarn.rs  lib.rs  logsview.rs  main.rs  mouse.rs  openwith.rs  poller.rs  powermenu.rs  protocol.rs  ptyhost.rs  service.rs  session.rs  (+10 more)
src/apphost/: api.rs  host.rs  mod.rs  proto.rs  remote.rs  server.rs
src/system/: linux.rs  macos.rs  mod.rs
src/wayland/: backend.rs  compositor.rs  input.rs  mod.rs  protocols.rs
tests/: buffer_tests.rs  catalog_tests.rs  cell_tests.rs  chrome_tests.rs  compositor_tests.rs  config_tests.rs  desktop_tests.rs  dirpicker_tests.rs  filemanager_tests.rs  fileops_tests.rs  geometry_tests.rs  help_tests.rs  imagestore_tests.rs  imageview_tests.rs  input_tests.rs  kitty_tests.rs  kittygfx_tests.rs  launcher_tests.rs  openwith_tests.rs  protocol_tests.rs  ptyhost_tests.rs  session_tests.rs  settings_tests.rs  smoke_tests.rs  store_tests.rs  system_tests.rs  terminal_tests.rs  tray_tests.rs  wayland_compositor_tests.rs  wm_tests.rs
(+19 files in other folders)
