[package]
name = "tuiui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
alacritty_terminal = "0.26.0"
serde_json = "1.0.150"
sysinfo = "0.33"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[lib]
name = "tuiui"
path = "src/lib.rs"

[[bin]]
name = "tuiui"
path = "src/main.rs"
