[package]
name = "tuiui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A TUI desktop environment for the terminal"
repository = "https://github.com/jaylfc/tuiui"

[dependencies]
crossterm = "0.28"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
alacritty_terminal = "0.26.0"
serde_json = "1.0.150"
sysinfo = "0.33"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
infer = "0.16"
mime_guess = "2"
base64 = "0.22"
flate2 = "1"
libc = "0.2"
smithay = { version = "0", optional = true }
udev = { version = "0", optional = true }
drm = { version = "0", optional = true }
input = { version = "0", optional = true }
wayland-protocols = { version = "0", optional = true }

[features]
default = ["tui"]
tui = []
wayland-compositor = ["smithay", "udev", "drm", "input", "wayland-protocols"]

[lib]
name = "tuiui"
path = "src/lib.rs"

[[bin]]
name = "tuiui"
path = "src/main.rs"
