[package]
name = "tuiui"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A TUI desktop environment for the terminal"
repository = "https://github.com/jaylfc/tuiui"

[dependencies]
crossterm = "0.29"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
dirs = "5"
alacritty_terminal = "0.26.0"
serde_json = "1.0.150"
sysinfo = "0.38"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
infer = "0.19"
mime_guess = "2"
base64 = "0.22"
flate2 = "1"
libc = "0.2"

[lib]
name = "tuiui"
path = "src/lib.rs"

[[bin]]
name = "tuiui"
path = "src/main.rs"
